# -

./: .gitignore  1.txt  ADVANCED_ANALYTICS_IMPLEMENTATION_SUMMARY.md  AUTO_CLEANUP_DOCUMENTATION_SUMMARY.md  AUTO_CLEANUP_IMPLEMENTATION.md  BUSINESS_LOGIC.md  CHANGELOG.md  COMPLETE_GUI_FUNCTIONALITY_MAP.md  CORE_CODE_UPDATES_SUMMARY.md  Core_Logic_And_Data_Processing.md  ENHANCED_AUTO_CLEANUP_SUMMARY.md  FINAL_AUTO_CLEANUP_IMPLEMENTATION.md  FULL_GUI_FUNCTIONALITY.md  GUI_FUNCTIONALITY_DIAGRAM.md  GUI_FUNCTIONALITY_OVERVIEW.md  GUI_UPDATES_SUMMARY.md  HOW_TO_USE_FORMULA.md  INVENTORY_ANALYSIS_SUMMARY.md  INVENTORY_DATA_PROCESSING.md  LOGICAL_SEQUENTIALITY_IMPROVEMENTS.md  MODERNIZATION_REPORT.md  ORGANIZATION_COMPLETE.md  PARSING_PLAN.md  README.md  README_чтение_отчетов.txt  TEST_CLEANUP_SUMMARY.md  analyze_coefficients_accuracy.py  balance_analyzer.py  config.json  conversion_verification_report.txt  gemini_self_guide.md  launch.bat  launch.py  main.py  package-lock.json  package.json  project_index.md  project_organization_summary.md  project_status_and_description.md  pyproject.toml  (+15 more)
backups/: shrinkage_database.db_20250829_153906.bak  shrinkage_database.db_20250829_153949.bak  shrinkage_database.db_20250829_154302.bak  shrinkage_database.db_20250829_154602.bak  shrinkage_database.db_20250829_154747.bak  shrinkage_database.db_20250829_154958.bak
docs/: database_implementation_plan.md  database_implementation_summary.md  database_implementation_summary_ru.md  database_roadmap.md  database_technical_spec.md  database_usage_guide.md  gui_functionality.md  gui_functionality_updates.md  inventory_checking_functionality.md  model_descriptions.md  test_data_organization.md  АДАПТИВНАЯ_МОДЕЛЬ_УСУШКИ.md  ДОБАВЛЕНИЕ_КНОПОК_ОТКРЫТИЯ_ОТЧЕТОВ.md  ДОПОЛНИТЕЛЬНЫЕ_БИБЛИОТЕКИ.md  ИНСТРУКЦИЯ_ОБРАТНАЯ_КОНВЕРТАЦИЯ.md  ИСПРАВЛЕНИЯ_ГРАФИЧЕСКОГО_ИНТЕРФЕЙСА.md  ОРГАНИЗАЦИЯ_СТРУКТУРЫ.md  ОТЧЕТ_ОПТИМИЗАЦИЯ_И_УЛУЧШЕНИЯ.md  ПЕР_НОМЕНКЛАТУРНЫЙ_УЧЕТ_ИЗЛИШКА.md  ПРИМЕР_РАСЧЕТА_СКУМБРИЯ_ХК.md  СВОДКА_ПО_ИСХОДНЫМ_ДАННЫМ.md  СОДЕРЖИМОЕ.md  СОХРАНЕНИЕ_ИЕРАРХИИ_EXCEL.md  СПЕЦИФИКАЦИЯ_СТРУКТУРЫ_ОТЧЕТОВ.md  СТРУКТУРА_ПРОЕКТА.md  ТЕХНИЧЕСКОЕ_ЗАДАНИЕ.md  ТИПЫ_ПРОДУКЦИИ.md  организация_тестовых_данных.md  реализованные_функции.md  руководство_по_группировке.md  система_верификации.md  тестирование.md
examples/: advanced_analytics_example.py  advanced_analytics_reporting_example.py  create_sample_excel.py  database_example.py  extract_shrinkage_data.py  extract_shrinkage_data_refined.py  postgresql_example.py  test_inventory_warnings.py  test_nan_handling.py  test_zero_balance_report.py  анализ_бычки_валеные.py  анализ_и_обработка_реального_файла.py  анализ_и_поиск_данных_с_усушкой.py  демонстрация_взаимодействия_с_пользователем.py  демонстрация_обработки_неполных_данных.py  демонстрация_проверки_инвентаризаций.py  демонстрация_чтения_отчета.py  детальная_верификация_коэффициентов.py  обработка_исходных_данных.py  обработка_реального_файла_с_верификацией.py  обработка_реальных_данных.py  обработка_скумбрия_хк_верификация.py  обработка_сложных_данных_скумбрия.py  полная_верификация_реального_файла.py  пример_верификации_коэффициентов.py  пример_сохранения_группировки.py  пример_типов_продукции.py  пример_типов_продукции_json.py  пример_типов_продукции_иерархия.py  создать_исходные_данные.py  тест_верификации_с_реальными_данными.py  тест_проверки_инвентаризаций.py  тест_реальных_данных_с_предупреждениями.py  финальная_демонстрация_верификации.py
scripts/: auto_git_push.py  cleanup_test_files.py  init_postgresql.py  migrate_to_postgresql.py  organize_project.py  organize_results.py  organize_test_data.py  run_migrations.py  setup_auto_git_push.bat  verify_structure.py
src/: api.py  cli.py  config.py  dashboard.py  gui.py  gui_complete.py  logger_config.py  tkinter_gui.py
tests/: check_ai_chat.py  check_restored_grouping.py  comprehensive_parser_test.py  comprehensive_test.py  conftest.py  final_comprehensive_test.py  full_cycle_grouping_test.py  production_readiness_check.py  test_100_percent_accuracy.py  test_adaptive_model.py  test_advanced_analytics.py  test_advanced_analytics_reporter.py  test_ai_chat_extended.py  test_ai_chat_simple.py  (+29 more)
(+312 files in other folders)
