[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrinkage-calculator"
version = "1.2.1"
description = "Система расчета коэффициентов нелинейной усушки"
readme = "README.md"
authors = [
    {name = "Разработчик системы", email = "developer@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    # Высокопроизводительная обработка данных
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    
    # Валидация данных
    "pydantic>=2.0.0",
    
    # Логирование
    "loguru>=0.7.0",
    
    # Графический интерфейс (десктоп)
    "flet>=0.25.0",
    
    # Интерактивные веб-дашборды
    "streamlit>=1.37.0",
    
    # Движки для чтения/записи Excel
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "xlsxwriter>=3.0.0",
    
    # Визуализация данных
    "matplotlib>=3.5.0",
    "plotly>=5.22.0",
    
    # Базы данных
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "psycopg2-binary>=2.9.0",
    
    # Веб-фреймворк для API
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "isort>=5.13.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[project.scripts]
shrinkage-gui = "src.gui_complete:main"
shrinkage-tkinter = "src.tkinter_gui:main"
shrinkage-dashboard = "src.dashboard:main"
shrinkage-cli = "src.cli:main"

[project.urls]
Homepage = "https://github.com/example/shrinkage-calculator"
Documentation = "https://github.com/example/shrinkage-calculator/wiki"
Repository = "https://github.com/example/shrinkage-calculator.git"
"Bug Tracker" = "https://github.com/example/shrinkage-calculator/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests as GUI tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]